[package]
name = "tool-error-classify"
version = "0.1.0"
edition = "2021"
rust-version = "1.74"
description = "Classify tool errors into a closed ErrorKind enum (USER_INPUT, AUTH, RATE_LIMITED, RETRYABLE, etc.) so agent loops can decide what to do next."
authors = ["Mukunda Rao Katta <mukunda.vjcs6@gmail.com>"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/MukundaKatta/tool-error-classify-rs"
homepage = "https://github.com/MukundaKatta/tool-error-classify-rs"
documentation = "https://docs.rs/tool-error-classify"
readme = "README.md"
keywords = ["llm", "agents", "error", "classification", "tool"]
categories = ["api-bindings"]
exclude = [".github/*", "target/*", "*.log"]

[features]
# Off by default to keep the crate dependency-free. Enable to derive
# `Serialize`/`Deserialize` for `ErrorKind`, `ClassifiedError`, and `ErrorInfo`.
default = []
serde = ["dep:serde"]

[dependencies]
serde = { version = "1", optional = true, features = ["derive"] }

[dev-dependencies]
serde_json = "1"

[package.metadata.docs.rs]
# Build docs on docs.rs with all features so the serde impls are documented.
all-features = true
